sources = files(
    'actions.c',
    'actions.c',
    'ansi.c',
    'autocomp.c',
    'buffer.c',
    'clips.c',
    'cm.c',
    'cm.h',
    'command.c',
    'debug.h',
    'display.c',
    'edit.c',
    'errors.c',
    'errors.h',
    'exec.c',
    'ext.c',
    'hash.c',
    'help.c',
    'input.c',
    'inputclass.c',
    'keycodes.h',
    'keys.c',
    'menu.c',
    'names.c',
    'navigation.c',
    'ne.c',
    'ne.h',
    'prefs.c',
    'protos.h',
    'regex.c',
    'regex.h',
    'request.c',
    'search.c',
    'signals.c',
    'streams.c',
    'support.c',
    'support.h',
    'syn_hash.c',
    'syn_hash.h',
    'syn_regex.c',
    'syn_regex.h',
    'syn_types.h',
    'syn_utf8.c',
    'syn_utf8.h',
    'syn_utils.c',
    'syn_utils.h',
    'syntax.c',
    'syntax.h',
    'term.c',
    'termchar.h',
    'undo.c',
    'utf8.c',
    'utf8.h',
)
